--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@react-native-community/slider": "^4.4.3",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.14",
+    "axios": "^1.6.0",
     "deprecated-react-native-prop-types": "^5.0.0",
     "expo-font": "^11.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
-    "react-native-svg": "^13.14.0",
+    "react-native-svg": "^7.2.1",
     "react-native-svg-charts": "^5.4.0",
     "react-native-vector-icons": "^10.0.1"
   },
