--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native-screens": "^3.27.0",
     "react-native-svg": "^7.2.1",
     "react-native-svg-charts": "^5.4.0",
-    "react-native-vector-icons": "^10.0.1"
+    "react-native-vector-icons": "^10.0.1",
+    "react-native-webview": "^13.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
